--- a/views/user/orderDeatil.ejs
+++ b/views/user/orderDeatil.ejs
@@ -201,7 +201,7 @@
                         Swal.fire({
                           icon: 'success',
                           title: 'Success',
-                          text: 'Cancellation request sent for admin approval.',
+                          text: 'Cancellation request sented.',
                           confirmButtonText: 'OK',
                         }).then(() => {
                           $('#cancellationModal').modal('hide'); // Close the modal
